# lcsm-project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lcsm/: CMakeLists.txt  config.cmake.in
lcsm-vis/: CMakeLists.txt
lcsm-vis/view/: mainwindow.cpp  mainwindow.ui
lcsm-visual/: CMakeLists.txt  lcsm-visual.cpp
lcsm-visual/Core/: CMakeLists.txt  CoreScene.cpp  CoreScene.h  Library.cpp  Library.h  Project.cpp  Project.h  Scene.cpp  Scene.h
lcsm-visual/GUI/: CMakeLists.txt  GUIOptions.cpp  GUIOptions.h  GUIScene.cpp  GUIScene.h  GUIView.cpp  GUIView.h
lcsm-visual/Items/: CMakeLists.txt  CircuitItem.cpp  CircuitItem.h  ClockItem.cpp  ClockItem.h  ComponentItem.cpp  ComponentItem.h  ConstantItem.cpp  ConstantItem.h  GroundItem.cpp  GroundItem.h  ImmovableItem.cpp  ImmovableItem.h  Item.cpp  Item.h  MovableItem.cpp  MovableItem.h  PinItem.cpp  PinItem.h  PowerItem.cpp  PowerItem.h  SplitterItem.cpp  SplitterItem.h  TransistorItem.cpp  TransistorItem.h  TunnelItem.cpp  TunnelItem.h  VerilogItem.cpp  VerilogItem.h  WireItem.cpp  WireItem.h  WireLine.cpp  WireLine.h
lcsm-visual/Support/: CMakeLists.txt  Strings.cpp  Strings.h
lcsm-visual/View/: CMakeLists.txt  DesignDialog.cpp  DesignDialog.h  DesignExplorerList.cpp  DesignExplorerList.h  MainWindow.cpp  MainWindow.h  PropertiesList.cpp  PropertiesList.h  SimulateDialog.cpp  SimulateDialog.h
lcsm-visual/v/: DesignExplorerList.cpp
lcsm-visual/view/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
lcsm/docs/: Doxyfile.in
lcsm/include/: CMakeLists.txt
lcsm/include/lcsm/: .gitignore  CMakeLists.txt  LCSM.h  LCSMBuilder.h  LCSMC.h  LCSMCircuit.h  LCSMContext.h  LCSMEngine.h  LCSMState.h  lcsmconfig.h
lcsm/include/lcsm/Component/: CircuitComponent.h  Component.h  IOComponent.h  Identifier.h  Listener.h  WiringComponent.h
lcsm/include/lcsm/IR/: Bit.h  CG.h  CGObject.h  DataBits.h  Event.h  Instruction.h  Value.h  Width.h
lcsm/include/lcsm/Model/: Builder.h  CMakeLists.txt  Circuit.h  Component.h  Identifier.h  Verilog.h  Width.h  Wire.h
lcsm/include/lcsm/Physical/: CMakeLists.txt  Context.h  DataBits.h  Evaluator.h  Event.h  Instruction.h  Snapshot.h  Timestamp.h
lcsm/include/lcsm/Support/: Algorithm.hpp  CMakeLists.txt  Files.h  Meta.hpp  Numbers.hpp  PointerView.hpp  StaticArray.hpp  Strings.h  Subprocesses.h
lcsm/include/lcsm/Testing/: Asserts.h  CMakeLists.txt  Test.h
lcsm/include/lcsm/Verilog/: Bit.h  CMakeLists.txt  Capacitive.h  Module.h  Port.h  Strength.h  Value.h
lcsm/src/: CMakeLists.txt  LCSM.cpp  LCSMBuilder.cpp  LCSMCircuit.cpp  LCSMCircuitInner.cpp  LCSMCircuitView.cpp  LCSMContext.cpp  LCSMEngine.cpp  LCSMState.cpp
lcsm/src/Component/: CMakeLists.txt  CircuitComponent.cpp  Component.cpp  IOComponent.cpp  Identifier.cpp  WiringComponent.cpp
lcsm/src/IR/: Bit.cpp  CMakeLists.txt  DataBits.cpp  Event.cpp  Instruction.cpp  Value.cpp
lcsm/src/IR/CG/: CG.cpp  CGCollector.cpp  CGCompositeNode.cpp  CGConstant.cpp  CGDynamicNode.cpp  CGEdge.cpp  CGFastNode.cpp  CGGround.cpp  CGNode.cpp  CGObject.cpp  CGPin.cpp  CGPinInput.cpp  CGPinOutput.cpp  CGPower.cpp  CGSplitter.cpp  CGState.cpp  CGStaticNode.cpp  CGTransistor.cpp  CGWire.cpp  CMakeLists.txt
lcsm/src/IR/Instruction/: BroadcastValueInstruction.cpp  CMakeLists.txt  UpdateStateInstruction.cpp  WriteValueInstruction.cpp
lcsm/src/Model/: Builder.cpp  CMakeLists.txt  Circuit.cpp  Identifier.cpp  Verilog.cpp  VerilogModule.cpp  Width.cpp  Wire.cpp
lcsm/src/Model/Circuit/: Clock.cpp  (+8 more)
lcsm/src/Physical/: CMakeLists.txt  Context.cpp  DataBits.cpp  Evaluator.cpp  EvaluatorNode.cpp  Event.cpp  Instruction.cpp  PrivateContext.cpp  Snapshot.cpp  Timestamp.cpp
lcsm/src/Support/: CMakeLists.txt  CommonRemoveFile.cpp  CommonSubprocessRun.cpp  CompletedProcess.cpp  LinuxRemoveFile.cpp  LinuxSubprocessRun.cpp  Strings.cpp  WindowsRemoveFile.cpp  WindowsSubprocessRun.cpp
lcsm/src/Testing/: Asserts.cpp  CMakeLists.txt  Test.cpp
lcsm/src/Verilog/: Bit.cpp  CMakeLists.txt  IOType.cpp  Module.cpp  Port.cpp  PortDirectionType.cpp  PortType.cpp  Strength.cpp  Value.cpp
lcsm/test/: CMakeLists.txt  test_dummy.cpp  test_dummy_copy.cpp  test_ground_to_pin.cpp  test_internal_circuit.cpp  test_logical_not.cpp  test_pin_to_pin.cpp  test_power_to_pin.cpp
lcsm/test/Circuit/: CMakeLists.txt  ClockTest.cpp  GroundToPinTest.cpp  PinToPin3Test.cpp  PowerToPinTest.cpp  SplitterTest.cpp
lcsm/test/Component/: CMakeLists.txt
lcsm/test/Example/: LogicalNotTest.cpp
lcsm/test/Logical/: CMakeLists.txt  LogicalAndNotTest.cpp  LogicalAndTest.cpp  LogicalNotTest.cpp  LogicalOrNotTest.cpp  LogicalXorTest.cpp
lcsm/test/Other/: CMakeLists.txt  CircuitInCircuitTest.cpp  CopyTest.cpp  LCSMFileTest.cpp  RemoveTest.cpp  VerilogTest.cpp
lcsm/test/Triggers/: CMakeLists.txt  RSTriggerTest.cpp
lcsm/test/Userend/: CircuitInCircuitTest.cpp  RemoveTest.cpp
lcsm/test/lib/: CMakeLists.txt
lcsm/test/src/: CMakeLists.txt
lcsm/utils/: generate_lcsm_config.py  valgrind.sh
src/: CMakeLists.txt  SimBuilder.cpp  SimCircuit.cpp  SimContext.cpp  SimEngine.cpp  SimState.cpp
src/Component/: CircuitComponent.cpp  Component.cpp  IOComponent.cpp  Identifier.cpp  WiringComponent.cpp
src/IR/: BV.cpp  Bit.cpp  CG.cpp  CGNode.cpp  CGObject.cpp  CGPin.cpp  CGPinInput.cpp  CGPinOutput.cpp  CGWire.cpp  Instruction.cpp  RV.cpp  Value.cpp  WV.cpp
src/IR/CG/: CG.cpp  CGCompositeNode.cpp  CGConstant.cpp  CGDynamicNode.cpp  CGEdge.cpp  CGFastNode.cpp  CGGround.cpp  CGNode.cpp  CGObject.cpp  CGPin.cpp  CGPinInput.cpp  CGPinOutput.cpp  CGPower.cpp  CGState.cpp  CGStaticNode.cpp  CGTransistor.cpp  CGWire.cpp
src/IR/Instruction/: BroadcastValueInstruction.cpp  UpdateElementStateInstruction.cpp  UpdateStateInstruction.cpp  WriteValueInstruction.cpp  WriteValueStabilizedInstruction.cpp
src/Model/: Value.cpp
src/Model/Circuit/: Clock.cpp  Constant.cpp  Ground.cpp  Pin.cpp  Power.cpp  Splitter.cpp  Transistor.cpp  TransmissionGate.cpp
src/Model/IO/: Button.cpp  Digit.cpp  Probe.cpp
src/Model/Wiring/: Tunnel.cpp  Wire.cpp
test/: CMakeLists.txt  test_dummy.cpp  test_logical_not.cpp
(+250 files in other folders)
