CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
PROJECT(LogicalCircuitStateMachine LANGUAGES CXX C)

SET(CMAKE_C_STANDARD 99)
SET(CMAKE_C_STANDARD_REQUIRED ON)
SET(CMAKE_C_EXTENSIONS OFF)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

OPTION(LCSM_BUILD_TESTS "Build LCSM's tests." OFF)
OPTION(LCSM_BUILD_VISUAL "Build LCSM Visual application." OFF)

OPTION(BUILD_USE_SANITIZER "Enable to build with default sanitizers." OFF)
OPTION(BUILD_ENABLE_WERROR "Treat all warnings as compile errors." OFF)

INCLUDE(GNUInstallDirs)
INCLUDE(CMakePackageConfigHelpers)
INCLUDE(CTest)

IF(LCSM_BUILD_TESTS)
    ENABLE_TESTING()
ENDIF()

ADD_SUBDIRECTORY(lcsm)

IF(LCSM_BUILD_VISUAL)
    ADD_SUBDIRECTORY(lcsm-vis)
ENDIF()
