FUNCTION(lcsm_add_test testName)
    SET(testFileName "${testName}Test.cpp")
    ADD_EXECUTABLE(${testName}Test "${CMAKE_CURRENT_SOURCE_DIR}/${testFileName}")
    TARGET_LINK_LIBRARIES(${testName}Test PRIVATE LCSM LCSMTesting)
    ADD_TEST(NAME ${testName} COMMAND ${testName}Test)
    SOURCE_GROUP("Source files/LCSM Tests" FILES "${testFileName}")
ENDFUNCTION()

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(src)
