ADD_SUBDIRECTORY(CG)
ADD_SUBDIRECTORY(Instruction)

LIST(
    APPEND

    LCSM_DETAILS_LCSM_MAIN_LIBRARY_SOURCES_IR

    ${LCSM_DETAILS_LCSM_MAIN_LIBRARY_SOURCES_IR_CG}
    ${LCSM_DETAILS_LCSM_MAIN_LIBRARY_SOURCES_IR_INSTRUCTION}

    Bit.cpp
    Instruction.cpp
    Value.cpp
)

SET(LCSM_DETAILS_LCSM_MAIN_LIBRARY_SOURCES_IR ${LCSM_DETAILS_LCSM_MAIN_LIBRARY_SOURCES_IR} PARENT_SCOPE)
