ADD_SUBDIRECTORY(Circuit)
ADD_SUBDIRECTORY(IO)
ADD_SUBDIRECTORY(Wiring)

LIST(
    APPEND

    LCSM_DETAILS_LCSM_MAIN_LIBRARY_SOURCES_MODELS

    ${LCSM_DETAILS_LCSM_MAIN_LIBRARY_SOURCES_MODELS_CIRCUIT}
    ${LCSM_DETAILS_LCSM_MAIN_LIBRARY_SOURCES_MODELS_IO}
    ${LCSM_DETAILS_LCSM_MAIN_LIBRARY_SOURCES_MODELS_WIRING}
)

SET(LCSM_DETAILS_LCSM_MAIN_LIBRARY_SOURCES_MODELS ${LCSM_DETAILS_LCSM_MAIN_LIBRARY_SOURCES_MODELS} PARENT_SCOPE)
