PROJECT(LCSMTesting LANGUAGES CXX VERSION 1.0.0)

ADD_LIBRARY(LCSMTesting)
LCSM_BASE_SETUP_TARGET(LCSMTesting)

SET(LCSMTesting_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/Asserts.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/Test.cpp
)

SET(LCSMTesting_HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/include/lcsm/Testing/Asserts.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/lcsm/Testing/Test.h
)

SOURCE_GROUP("Header files/lcsm/Testing" FILES ${LCSMTesting_HEADERS})

TARGET_INCLUDE_DIRECTORIES(LCSMTesting
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

TARGET_SOURCES(LCSMTesting
    PRIVATE
        ${LCSMTesting_SOURCES}
        ${LCSMTesting_HEADERS}
)

TARGET_LINK_LIBRARIES(LCSMTesting PRIVATE LCSM)

SET(LCSMTesting_PUBLIC_HEADERS "${LCSMTesting_HEADERS}")
SET_TARGET_PROPERTIES(LCSMTesting PROPERTIES PUBLIC_HEADER "${LCSMTesting_PUBLIC_HEADERS}")
