PROJECT(LCSMTesting LANGUAGES CXX
        VERSION 1.0.0
        DESCRIPTION "LCSM's testing library."
        HOMEPAGE_URL "https://github.com/sfbakturin/lcsm-project"
)

ADD_LIBRARY(LCSMTesting)
LCSM_BASE_SETUP_TARGET(LCSMTesting)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(include)

TARGET_INCLUDE_DIRECTORIES(LCSMTesting PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

TARGET_SOURCES(LCSMTesting
    PRIVATE
        ${LCSMTesting_SOURCES}
        ${LCSMTesting_HEADERS}
)

TARGET_LINK_LIBRARIES(LCSMTesting PRIVATE LCSM)
